2023-03-13  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-beta01: Heisler Picnic';git push
	git tag -a 5.1.5-beta01 -m 'all: tgl->abs, NCZarr chk drc, dnd rgl fl; ncrcat: no_cll_mth; ncremap eamxx pdq plev, CF, prs_stt_usr fix plev_nm, ps_rtn, mss_val var_lst_zmid';git push --tags

	* NCO 5.1.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha04: Rehab paddling';git push
	git tag -a 5.1.5-alpha04 -m 'all: Toggle->Absolute; ncremap ps_rtn, vrt mss_val';git push --tags

2023-03-12  Charlie Zender  <zender@uci.edu>

	* ncremap vertical interpolation on half-range missing values copies from valid value

2023-03-11  Charlie Zender  <zender@uci.edu>

	* ncremap add --ps_rtn flag

	* ncremap prevent vertical interpolation calculations from using missing values

2023-03-10  Charlie Zender  <zender@uci.edu>

	* Change toggle to absolute False for FL_LST_IN_APPEND, HISTORY_APPEND, RM_RMT_FL_PST_PRC switches

	* Change toggle to absolute True for FORTRAN_IDX_CNV switch

2023-03-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha03: Blizzard';git push
	git tag -a 5.1.5-alpha03 -m 'NCZarr chk drc, dnd rgl fl; ncremap eamxx pdq plev, eamxx CF, fix prs_stt_usr';git push --tags

	* Provide more information when NCZarr path attempts to mv or rm non-NCZarr files/directories

2023-03-05  Charlie Zender  <zender@uci.edu>

	* Prevent NCO from deleting/overwriting regular files with NCZarr directories

2023-03-04  Charlie Zender  <zender@uci.edu>

	* ncremap: fix prs_stt_usr translation into prs_stt that has used wrong	(opposite) logic since ... forever?

	* ncpdq: Quiet warning message about non-identity re-ordering of multiple dimensions with same names (EAMxx restarts have multiple dimensions named gp)

	* ncremap: Add plev to pdq_opt for EAMxx files

2023-02-25  Charlie Zender  <zender@uci.edu>
